templates/prometheus/030-Deployment-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: enmasse
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enmasse
      name: prometheus
  template:
    metadata:
      labels:
        app: enmasse
        name: prometheus
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.enmasse.io/operator-infra
                    operator: In
                    values:
                      - "true"
      containers:
      - image: ${PROMETHEUS_IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        name: prometheus
        ports:
        - containerPort: 9090
          name: prometheus
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-config
          readOnly: true
        - mountPath: /prometheus
          name: prometheus-data
          readOnly: false
        command:
          - /bin/prometheus
          - --config.file=/etc/prometheus/prometheus.yml
          - --web.external-url=http://nginx:8080/prometheus/
          - --web.route-prefix=/
      serviceAccountName: prometheus-server
      volumes:
      - configMap:
          name: prometheus-config
        name: prometheus-config
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data
