templates/prometheus/010-Service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-k8s
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-proxy-cert
  labels:
    app: enmasse
    prometheus: k8s
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  - name: proxy
    port: 443
    targetPort: 8443
  selector:
    prometheus: k8s
